<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_reset_root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/settings_textview_password_title"
            style="@style/TextSubHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/settings_password_reset_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settings_password_current_inputLayout"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="750dp"
            android:layout_height="120dp"
            android:layout_marginTop="128dp"
            android:layout_weight="0.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_textview_password_title"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_current_password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:ems="10"
                android:hint="@string/settings_password_current"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settings_password_new_inputLayout"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="750dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:layout_weight="0.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_password_current_inputLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_password_new"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="296dp"
                android:ems="10"
                android:hint="@string/settings_password_new"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settings_password_confirm_inputLayout"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="750dp"
            android:layout_height="120dp"
            android:layout_marginTop="44dp"
            android:layout_weight="0.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_password_new_inputLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_password_confirm"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/settings_password_repeat"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/settings_submit_reset"
            style="@style/TextButtonBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="100dp"
            android:text="@string/settings_button_submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>